paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/function_calls/sample_002/target.compile.log
error[E0658]: use of unstable library feature `rustc_private`: this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/function_calls/sample_002/target.rs:4:1
  |
4 | extern crate lazy_static;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: see issue #27812 <https://github.com/rust-lang/rust/issues/27812> for more information
  = help: add `#![feature(rustc_private)]` to the crate attributes to enable
  = note: this compiler was built on 2025-09-09; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `rustc_private`: this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/function_calls/sample_002/target.rs:6:1
  |
6 | / lazy_static! {
7 | |     static ref STATE: Mutex<State> = Mutex::new(State::new());
8 | | }
  | |_^
  |
  = note: see issue #27812 <https://github.com/rust-lang/rust/issues/27812> for more information
  = help: add `#![feature(rustc_private)]` to the crate attributes to enable
  = note: this compiler was built on 2025-09-09; consider upgrading it if it is out of date
  = note: this error originates in the macro `__lazy_static_internal` which comes from the expansion of the macro `lazy_static` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0658]: use of unstable library feature `rustc_private`: this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/function_calls/sample_002/target.rs:6:1
  |
6 | / lazy_static! {
7 | |     static ref STATE: Mutex<State> = Mutex::new(State::new());
8 | | }
  | |_^
  |
  = note: see issue #27812 <https://github.com/rust-lang/rust/issues/27812> for more information
  = help: add `#![feature(rustc_private)]` to the crate attributes to enable
  = note: this compiler was built on 2025-09-09; consider upgrading it if it is out of date
  = note: this error originates in the macro `__lazy_static_create` which comes from the expansion of the macro `lazy_static` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0658]: use of unstable library feature `rustc_private`: this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/function_calls/sample_002/target.rs:6:1
  |
6 | / lazy_static! {
7 | |     static ref STATE: Mutex<State> = Mutex::new(State::new());
8 | | }
  | |_^
  |
  = note: see issue #27812 <https://github.com/rust-lang/rust/issues/27812> for more information
  = help: add `#![feature(rustc_private)]` to the crate attributes to enable
  = note: this compiler was built on 2025-09-09; consider upgrading it if it is out of date
  = note: this error originates in the macro `__lazy_static_create` which comes from the expansion of the macro `lazy_static` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0658]: use of unstable library feature `rustc_private`: this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/function_calls/sample_002/target.rs:6:1
  |
6 | / lazy_static! {
7 | |     static ref STATE: Mutex<State> = Mutex::new(State::new());
8 | | }
  | |_^
  |
  = note: see issue #27812 <https://github.com/rust-lang/rust/issues/27812> for more information
  = help: add `#![feature(rustc_private)]` to the crate attributes to enable
  = note: this compiler was built on 2025-09-09; consider upgrading it if it is out of date
  = note: this error originates in the macro `__lazy_static_internal` which comes from the expansion of the macro `lazy_static` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0658]: use of unstable library feature `rustc_private`: this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/function_calls/sample_002/target.rs:6:1
  |
6 | / lazy_static! {
7 | |     static ref STATE: Mutex<State> = Mutex::new(State::new());
8 | | }
  | |_^
  |
  = note: see issue #27812 <https://github.com/rust-lang/rust/issues/27812> for more information
  = help: add `#![feature(rustc_private)]` to the crate attributes to enable
  = note: this compiler was built on 2025-09-09; consider upgrading it if it is out of date
  = note: this error originates in the macro `__lazy_static_internal` which comes from the expansion of the macro `lazy_static` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0658]: use of unstable library feature `rustc_private`: this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/function_calls/sample_002/target.rs:6:1
  |
6 | / lazy_static! {
7 | |     static ref STATE: Mutex<State> = Mutex::new(State::new());
8 | | }
  | |_^
  |
  = note: see issue #27812 <https://github.com/rust-lang/rust/issues/27812> for more information
  = help: add `#![feature(rustc_private)]` to the crate attributes to enable
  = note: this compiler was built on 2025-09-09; consider upgrading it if it is out of date
  = note: this error originates in the macro `__lazy_static_internal` which comes from the expansion of the macro `lazy_static` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0658]: use of unstable library feature `rustc_private`: this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/function_calls/sample_002/target.rs:6:1
  |
6 | / lazy_static! {
7 | |     static ref STATE: Mutex<State> = Mutex::new(State::new());
8 | | }
  | |_^
  |
  = note: see issue #27812 <https://github.com/rust-lang/rust/issues/27812> for more information
  = help: add `#![feature(rustc_private)]` to the crate attributes to enable
  = note: this compiler was built on 2025-09-09; consider upgrading it if it is out of date
  = note: this error originates in the macro `__lazy_static_create` which comes from the expansion of the macro `lazy_static` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0502]: cannot borrow `state` as immutable because it is also borrowed as mutable
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/function_calls/sample_002/target.rs:29:20
   |
29 |         state.logv[state.logn] = id;
   |         -----------^^^^^------
   |         |          |
   |         |          immutable borrow occurs here
   |         mutable borrow occurs here
   |         mutable borrow later used here
   |
help: try adding a local storing this...
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/function_calls/sample_002/target.rs:29:20
   |
29 |         state.logv[state.logn] = id;
   |                    ^^^^^^^^^^
help: ...and then using that local here
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/function_calls/sample_002/target.rs:29:9
   |
29 |         state.logv[state.logn] = id;
   |         ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 9 previous errors

Some errors have detailed explanations: E0502, E0658.
For more information about an error, try `rustc --explain E0502`.